--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "hubot": "2.3.0",
     "hubot-scripts": ">= 2.1.0",
     "optparse": "1.0.3",
-    "hubot-irc": ">= 0.0.1"
+    "hubot-irc": ">= 0.0.1",
+    "underscore": "1.3.3",
+    "handlebars": "1.0.5beta"
   },
 
   "engines": {
