--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "optparse": "1.0.3",
     "hubot-irc": ">= 0.0.1",
     "underscore": "1.3.3",
-    "handlebars": "1.0.5beta"
+    "handlebars": "1.0.5beta",
+    "htmlparser": "1.7.6",
+    "soupselect": "0.2.0"
   },
 
   "engines": {
