--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
   },
 
   "dependencies": {
-    "hubot": "2.3.0",
-    "hubot-scripts": ">= 2.1.0",
+    "hubot": "2.5.5",
+    "hubot-scripts": "~2.4.6",
     "optparse": "1.0.3",
     "hubot-irc": "0.1.0",
     "underscore": "1.3.3",
     "handlebars": "1.0.5beta",
     "htmlparser": "1.7.6",
-    "soupselect": "0.2.0"
+    "soupselect": "0.2.0",
+    "ntwitter": "0.5.0",
+    "redis": "0.8.4"
   },
 
   "engines": {
@@ -30,4 +32,3 @@
     "npm": "1.1.65"
   }
 }
-
