--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name":        "hosted-hubot",
-  "version":     "2.3.0",
-  "author":      "GitHub Inc.",
-  "keywords":    "github hubot campfire bot",
+  "name": "hosted-hubot",
+  "version": "2.3.0",
+  "author": "GitHub Inc.",
+  "keywords": "github hubot campfire bot",
   "description": "A simple helpful Robot for your Company",
-  "licenses":     [{
-    "type":       "MIT",
-    "url":        "http://github.com/github/hubot/raw/master/LICENSE"
-  }],
-
-  "repository" : {
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://github.com/github/hubot/raw/master/LICENSE"
+    }
+  ],
+  "repository": {
     "type": "git",
-    "url":  "https://github.com/github/hubot.git"
+    "url": "https://github.com/github/hubot.git"
   },
-
   "dependencies": {
-    "hubot": "2.5.5",
-    "hubot-scripts": "~2.4.6",
-    "optparse": "1.0.3",
-    "hubot-irc": "0.1.0",
-    "underscore": "1.3.3",
     "handlebars": "1.0.5beta",
     "htmlparser": "1.7.6",
-    "soupselect": "0.2.0",
+    "hubot": "2.5.5",
+    "hubot-irc": "0.1.0",
+    "hubot-scripts": "~2.4.6",
+    "hubot-slack": "^3.4.2",
     "ntwitter": "0.5.0",
-    "redis": "0.8.4"
+    "optparse": "1.0.3",
+    "redis": "0.8.4",
+    "soupselect": "0.2.0",
+    "underscore": "1.3.3"
   },
-
   "engines": {
     "node": "0.8.14",
     "npm": "1.1.65"
