--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "dependencies": {
     "handlebars": "1.0.5beta",
     "htmlparser": "1.7.6",
-    "hubot": "2.5.5",
+    "hubot": "2.13.2",
     "hubot-irc": "0.1.0",
     "hubot-scripts": "~2.4.6",
-    "hubot-slack": "^3.4.2",
+    "hubot-slack": "3.4.2",
     "ntwitter": "0.5.0",
     "optparse": "1.0.3",
     "redis": "0.8.4",
@@ -28,7 +28,6 @@
     "underscore": "1.3.3"
   },
   "engines": {
-    "node": "0.8.14",
-    "npm": "1.1.65"
+    "node": "0.10.x"
   }
 }
