--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
-    "handlebars": "1.0.5beta",
-    "htmlparser": "1.7.6",
-    "hubot": "2.13.2",
-    "hubot-irc": "0.1.0",
-    "hubot-scripts": "~2.4.6",
-    "hubot-slack": "3.4.2",
-    "ntwitter": "0.5.0",
-    "optparse": "1.0.3",
-    "redis": "0.8.4",
-    "soupselect": "0.2.0",
-    "underscore": "1.3.3"
+    "hubot": "^2.13.2",
+    "hubot-diagnostics": "0.0.1",
+    "hubot-google-images": "^0.1.5",
+    "hubot-google-translate": "^0.2.0",
+    "hubot-help": "^0.1.1",
+    "hubot-heroku-keepalive": "0.0.4",
+    "hubot-irc": "^0.2.8",
+    "hubot-maps": "0.0.2",
+    "hubot-plusplus": "^1.1.5",
+    "hubot-pugme": "^0.1.0",
+    "hubot-reactgif": "^1.0.0",
+    "hubot-redis-brain": "0.0.3",
+    "hubot-rules": "^0.1.1",
+    "hubot-scripts": "^2.16.1",
+    "hubot-slack": "^3.3.0"
   },
   "engines": {
     "node": "0.10.x"
